# ev

./: .gitignore  CMakeLists.txt  README.md  configure.sh  debug.sh  instruções.txt  release.sh
src/: CMakeLists.txt  document.c  filename.c  main.c
src/include/: cursor.h  document.h  filename.h  minmax.h
